* 2012-05-31 - martin.herfurth@open-xchange.com

 - Fix for bug 22109: Use default sender address for IMip Mails.
 - Fix for bug 22098: Added resource tag to mails for resource invitations.
 - Fix for bug 22124: Invitations in shared IMAP folders.

* 2012-05-25 - thorben.betten@open-xchange.com

 - Fix for bug 22192: Proper decoding of MIME encoded Content-Disposition header
 - Fix for bug 22191: Discard empty mail in JSON response

* 2012-05-24 - martin.herfurth@open-xchange.com

 - Fix for bug 22158: Ignore ITip requests for exceptions on non existing series.

* 2012-05-24 - jan.bauerdick@open-xchange.com

 - Register RMI in the OSGI system

* 2012-05-23 - marcus.klein@open-xchange.com

 - Fix for bug 22163: Using cache write through for context to database assignment to prevent missing information while reading from slave.

* 2012-05-22 - marcus.klein@open-xchange.com

 - Fix for bug 22154: Fixed NullPointerException in startup of mail filter bundle.

* 2012-05-19 - thorben.betten@open-xchange.com

 - Fix for bug 22051: Re-parse Content-Type with regexes
 - Fix for bug 22062: Check for non-null mail identifier
 - Fix for bug 21933: Dealing with possible Facebook API error response (http://fbdevwiki.com/wiki/Error_codes)
 - Fix for bug 22060: Fixed parsing of IDN address

* 2012-05-14 - thorben.betten@open-xchange.com

 - Fix for bug 22128: Fall-back if user configuration cannot be loaded

* 2012-05-11 - marcus.klein@open-xchange.com

 - Fix for bug 22113: Do not return a database connection twice and database pooling now throws an exception in those cases.

* 2012-05-10 - marcus.klein@open-xchange.com

 - Fix for bug 20893: Using ui/product/name from ui.properties for calendar printing templates title.

* 2012-05-09 - marcus.klein@open-xchange.com

 - Fix for bug #21695: Due date for tasks must not be corrected to one day earlier as for full day appointments.
 - Fix for bug #21174: Removed hardcoded limit of 50,000 for contacts.
